# 3D-LiDAR-Points-Processer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  Python Developer - Technical Test.docx  README.md  buildplan.md  copyright.txt  main.py  pyproject.toml  read_data.py
.github/workflows/: tests.yml
cluster_images/: cluster_summary.csv
docs/: APPROACH.md
fit_images/: lidar_cable_points_easy_fit_summary.csv  lidar_cable_points_extrahard_fit_summary.csv  lidar_cable_points_hard_fit_summary.csv  lidar_cable_points_medium_fit_summary.csv
src/: __init__.py  cluster_data.py  explore_data.py  fit_catenary.py  read_data.py
src/lidar_catenary/: __init__.py  cli.py  cluster_data.py  explore_data.py  fit_catenary.py  read_data.py
tests/: test_fit_catenary.py  test_local_frame.py
