[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lidar-catenary"
version = "0.1.0"
description = "Detect overhead wires in LiDAR point clouds and fit 3D catenary models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
lidar-catenary = "lidar_catenary.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

